--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -33,11 +33,11 @@ p {
     width: 100%;
 	@media #{$break-narrow} {
 		width: 100%;
-		margin: $default-margin;
+		margin: #{$default-margin};
 	}
 	@media #{$break-wide} {
 		width: 90%;
-		margin: $default-margin;
+		margin: #{$default-margin};
 	}
 }
 
